--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="settings">Настройки</string>
     <string name="about_dev">Об аккаунте</string>
     <string name="exit">Выход</string>
+    <string name="results">Результаты</string>
+    <string name="videoLessons">Видеоуроки</string>
     <string name="site_menu_delete_all">Удалить все</string>
 
 
@@ -74,6 +76,7 @@
 
     <string name="details_text">Подробно</string>
     <string name="next_question">Следующий вопрос</string>
+    <string name="main_menu_return">Вернуться в главное меню</string>
     <string name="skipped_text">Вы пропустили этот вопрос</string>
     <string name="item_counter" formatted="false">%d / %d</string>
     <string name="no_internet">Интернет соединение недоступно!</string>
